beta main sections

--- a/index.html
+++ b/index.html
@@ -86,9 +86,34 @@
         </section>
 
         <!-- sezione 3 -->
+        <section class="main-content container clearfix">
+          <img id="book-profile" src="img/item3.svg" alt="book">
+          <div class="main-content text">
+            <h2>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
+           </h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
+            </p>
+          </div>
+        </section>
+
         <!-- sezione 4 più grande -->
+        <section class="main-content container">
           <!-- sez4 top -->
+          <div class="section-top">
+            <h2>
+              Lorem ipsum dolor sit amet consectetur.
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque nemo nulla fugit quidem magnam culpa totam repudiandae adipisci voluptas.
+            </p>
+          </div>
           <!-- sez4 bot -->
+          <div class="section-bottom">
+            <img id="big-videocall" src="img/item4-big.svg" alt="big img videocall">
+          </div>
+        </section>
     </main>
   <!-- footer -->
   
