fix larghezza sfondo pari no section 4

--- a/index.html
+++ b/index.html
@@ -60,60 +60,63 @@
     <main>
         
         <!-- sezione 1 -->
-        <section class="main-content container clearfix">
-          <img id="frog-studio-group" src="img/item1.svg" alt="frog">
-          <div class="main-content text">
-            <h2>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
-           </h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
-            </p>
-          </div>
-        </section>
+        <div class="box">
+          <section class="main-content container clearfix">
+            <img id="frog-studio-group" src="img/item1.svg" alt="frog">
+            <div class="main-content text">
+              <h2>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
+            </h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
+              </p>
+            </div>
+          </section>
+        </div>
     
         <!-- sezione 2 -->
-        <section class="main-content container clearfix">
-          <div class="main-content text">
-            <h2>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
-            </h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
-            </p>
-          </div>
-          <img id="mage-voice-connected" src="img/item2.svg" alt="mage">
-        </section>
+        <div class="box">
+          <section class="main-content container clearfix">
+            <div class="main-content text">
+              <h2>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
+              </h2>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
+              </p>
+            </div>
+            <img id="mage-voice-connected" src="img/item2.svg" alt="mage">
+          </section>
+        </div>
 
         <!-- sezione 3 -->
-        <section class="main-content container clearfix">
-          <img id="book-profile" src="img/item3.svg" alt="book">
-          <div class="main-content text">
-            <h2>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
-           </h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
-            </p>
-          </div>
-        </section>
-
-        <!-- sezione 4 più grande -->
-        <section class="main-content container">
-          <!-- sez4 top -->
-          <div class="section-top">
-            <h2>
-              Lorem ipsum dolor sit amet consectetur.
+        <div class="box">
+          <section class="main-content container clearfix">
+            <img id="book-profile" src="img/item3.svg" alt="book">
+            <div class="main-content text">
+              <h2>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
             </h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque nemo nulla fugit quidem magnam culpa totam repudiandae adipisci voluptas.
-            </p>
-          </div>
-          <!-- sez4 bot -->
-          <div class="section-bottom">
-            <img id="big-videocall" src="img/item4-big.svg" alt="big img videocall">
-          </div>
-        </section>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
+              </p>
+            </div>
+          </section>
+        </div>
+        <!-- sezione 4 più grande -->
+        <div class="box">
+          <section class="main-content container">
+            <!-- sez4 top -->
+              <h2>
+                Lorem ipsum dolor sit amet consectetur.
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae itaque nemo nulla fugit quidem magnam culpa totam repudiandae adipisci voluptas.
+              </p>
+            <!-- sez4 bot -->
+              <img id="big-videocall" src="img/item4-big.svg" alt="big img videocall">
+          </section>
+        </div>
     </main>
   <!-- footer -->
   
