--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <!-- sezione 4 più grande -->
         <div class="box">
-          <section class="main-content container">
+          <section class="main-content container bottom">
             <!-- sez4 top -->
               <h2>
                 Lorem ipsum dolor sit amet consectetur.
