fine main inizio footer

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <img id="frog-studio-group" src="img/item1.svg" alt="frog">
             <div class="main-content text">
               <h2>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
-            </h2>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, rem eum!
+              </h2>
               <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic minima et porro, exercitationem corporis ratione numquam repellat enim asperiores architecto aperiam dicta consequuntur.
               </p>
@@ -115,6 +115,16 @@
               </p>
             <!-- sez4 bot -->
               <img id="big-videocall" src="img/item4-big.svg" alt="big img videocall">
+            <!-- scritta pre footer -->
+              <div class="slogan">
+                <h3>
+                  Pronto ad iniziare la tua avventura?
+                </h3>
+                <a class="btn btn_big btn_blue" href="#">
+                  <i class="fas fa-long-arrow-alt-down">&nbsp;</i>
+                  Scarica per Mac
+                </a>
+            </div>
           </section>
         </div>
     </main>
