--- a/index.html
+++ b/index.html
@@ -128,8 +128,76 @@
           </section>
         </div>
     </main>
-  <!-- footer -->
-  
-</body>
 
+    <!-- footer -->
+    <footer>
+      <div class="container clearfix">
+        <div class="footer-content">
+          <div class="footer-left">
+            <h3>
+              Il tuo posto per parlare
+            </h3>
+            <img id ="ita" src="img/ita.png" alt="ita">
+            <span>Italiano </span>
+            <i class="fas fa-chevron-down drop-down"></i> <br>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-square"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+         
+         
+          <div class="footer-right"> 
+            <ul>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+            </ul>
+            <ul>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+            </ul>
+            <ul>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+            </ul>
+            <ul>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+              <li>Lorem</li>
+            </ul>
+          </div>
+
+          <div class="footer-bottom">
+            <div class="logo">
+              <img src="img/logo.svg" alt="logo">
+            </div>
+            <div class="btn btn_blue">
+              Registrati
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </footer>
+</body>
 </html>
