--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <i class="fab fa-youtube"></i>
           </div>
          
-         
-          <div class="footer-right"> 
+          <!-- liste -->
+          <span class="footer-right"> 
             <ul>
               <li>Lorem</li>
               <li><a href="#">Lorem</a></li>
@@ -179,7 +179,7 @@
               <li><a href="#">Lorem</a></li>
               <li><a href="#">Lorem</a></li>
             </ul>
-          </div>
+          </span>
 
           <div class="footer-bottom">
             <div class="logo">
