--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             </div>
           </section>
         </div>
+        
         <!-- sezione 4 più grande -->
         <div class="box">
           <section class="main-content container bottom">
@@ -181,7 +182,7 @@
             </ul>
           </span>
 
-          <div class="footer-bottom">
+          <div class="footer-bottom clearfix">
             <div class="logo">
               <img src="img/logo.svg" alt="logo">
             </div>
